# FakePGA

./: CMakeLists.txt  README.md  config.txt  preBuild.sh
src/: io.cpp  io.h  io_stub.cpp  main.cpp
src/inc/: io.h
verilog/: blinker.v  sr_latch.v  top.v
